contact page alignmrnt fix

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,12 +22,13 @@ input, textarea {
     border: solid black 1px;
 }
 
-input {
-    width: calc((50vw / 2));
+label {
+    /* width: 100%; */
+    margin-top: 20px;
 }
 
 textarea {
-    width: calc(50vw * 0.66);
+    /* width: 100%; */
 }
 
 ul {
@@ -255,34 +256,53 @@ form button:hover {
 }
 
 /*contact styling*/
+h2 {
+    font-size: 42px;
+}
+
 #contact {
     display: flex;
-    flex-direction: column;
-    /* height: 70vh; */
-    margin-bottom: 10vh;
-}
-
-#contact > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
     gap: 2vw;
+    justify-content: space-around;
+    align-items:center;
 }
 
-#contact > div > div > div {
+
+#contact > div :first-child {
+    font-weight: bolder;
+    margin-bottom: 8px;
+}
+
+/* #contact > div > div {
     margin-top: 30px;
 }
 
-#contact > div > div > div :first-child {
-    font-weight: bolder;
+#contact > div > h2, 
+#contact > div > p {
+    margin-top: 15px;
+} */
+
+#contact > div {
+    display: flex;
+    flex-direction: column;
+    justify-self: auto;
+    align-self: flex-start;
+    gap: 20px;
 }
 
-form div:first-child {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+form > div > div {
     gap: 10px;
 }
 
-form div:first-child > div {
+form div:first-child, form div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+form div:first-child > div, form div:nth-child(2) > div {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -295,15 +315,26 @@ form div:first-child > div {
 
 #message {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px;
-    margin-top: 20px;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    margin-right: 0;
+    /* gap: 20px; */
+    /* margin-top: 20px; */
 }
 
 form button {
     background-color: orange;
+    width: 100%;
+    border-radius: 20px;
+    /* padding: 0%; */
+    height: 40px;
+    margin-top: 20px;
+
+}
+
+form {
+    /* width:460px */
 }
 
 /*footer styling*/
